# platform.upstream.gst-plugins-good

./: .gitignore  Makefile.am  Makefile.in  RELEASE  aclocal.m4  configure  configure.ac  gst-plugins-good.spec  project.config
common/: Makefile.in
common/m4/: Makefile.in
debian/: changelog  control  rules  rules.old
docs/: Makefile.in
docs/plugins/: Makefile.in
docs/plugins/html/: ch01.html  ch02.html  ch03.html  gst-plugins-good-plugins-3gppmux.html  gst-plugins-good-plugins-aacparse.html  gst-plugins-good-plugins-aasink.html  gst-plugins-good-plugins-ac3parse.html  gst-plugins-good-plugins-agingtv.html  gst-plugins-good-plugins-alawdec.html  gst-plugins-good-plugins-alawenc.html  gst-plugins-good-plugins-alpha.html  gst-plugins-good-plugins-alphacolor.html  gst-plugins-good-plugins-amrparse.html  gst-plugins-good-plugins-apedemux.html  gst-plugins-good-plugins-apev2mux.html  gst-plugins-good-plugins-aspectratiocrop.html  gst-plugins-good-plugins-audioamplify.html  gst-plugins-good-plugins-audiochebband.html  gst-plugins-good-plugins-audiocheblimit.html  gst-plugins-good-plugins-audiodynamic.html  gst-plugins-good-plugins-audioecho.html  gst-plugins-good-plugins-audiofirfilter.html  gst-plugins-good-plugins-audioiirfilter.html  gst-plugins-good-plugins-audioinvert.html  (+221 more)
ext/: Makefile.in
ext/aalib/: Makefile.in
ext/annodex/: Makefile.in
ext/cairo/: Makefile.in
ext/dv/: Makefile.in
ext/esd/: Makefile.in
ext/flac/: Makefile.in
ext/gconf/: Makefile.in
ext/gdk_pixbuf/: Makefile.in
ext/hal/: Makefile.in
ext/jack/: Makefile.in
ext/jpeg/: Makefile.in
ext/libcaca/: Makefile.in
ext/libpng/: Makefile.in
ext/pulse/: Makefile.am  Makefile.in  pulsesink.c  pulsesink.h  pulsesrc.c  pulsesrc.h  pulseutil.c
ext/raw1394/: Makefile.in
ext/shout2/: Makefile.in
ext/soup/: Makefile.in  gstsouphttpsrc.c  gstsouphttpsrc.h
ext/speex/: Makefile.in
ext/taglib/: Makefile.in
ext/wavpack/: Makefile.in
gconf/: Makefile.in
gst/: Makefile.in
gst-libs/gst/: Makefile.am
gst-libs/gst/tuner/: Makefile.am
gst/alpha/: Makefile.in
gst/apetag/: Makefile.in
gst/audiofx/: Makefile.in
gst/audioparsers/: Makefile.in  gstaacparse.c  gstaacparse.h  gstamrparse.c  gstmpegaudioparse.c  gstmpegaudioparse.h
gst/auparse/: Makefile.in
gst/autodetect/: Makefile.in
gst/avi/: Makefile.in  gstavidemux.c  gstavidemux.h
gst/cutter/: Makefile.in
gst/debugutils/: Makefile.in
gst/deinterlace/: Makefile.in
gst/effectv/: Makefile.in
gst/equalizer/: Makefile.in
gst/flv/: Makefile.in  gstflvdemux.c
gst/flx/: Makefile.in
gst/goom/: Makefile.am  Makefile.in
gst/goom2k1/: Makefile.am  Makefile.in
gst/icydemux/: Makefile.in
gst/id3demux/: Makefile.in
gst/imagefreeze/: Makefile.in
gst/interleave/: Makefile.in
gst/isomp4/: Makefile.in  fourcc.h  gstqtmux.c  gstqtmux.h  qtdemux.c  qtdemux.h  qtdemux_dump.c  qtdemux_dump.h  qtdemux_fourcc.h  qtdemux_types.c
gst/law/: Makefile.in
gst/level/: Makefile.in
gst/matroska/: Makefile.in  ebml-read.c  ebml-read.h  matroska-demux.c  matroska-demux.h  matroska-ids.h  matroska-mux.c
gst/monoscope/: Makefile.in
gst/multifile/: Makefile.in
gst/multipart/: Makefile.in
gst/replaygain/: Makefile.in
gst/rtp/: Makefile.am  Makefile.in  gstrtph264pay.c
gst/rtpmanager/: Makefile.in
gst/rtsp/: Makefile.in
gst/shapewipe/: Makefile.in
gst/smpte/: Makefile.in
gst/spectrum/: Makefile.in
gst/udp/: Makefile.in  gstmultiudpsink.c
gst/videobox/: Makefile.in
gst/videocrop/: Makefile.in
gst/videofilter/: Makefile.in
gst/videomixer/: Makefile.in
gst/wavenc/: Makefile.in
gst/wavparse/: Makefile.in  gstwavparse.c
gst/y4m/: Makefile.in
m4/: Makefile.in
mobile/: configure.ac
mobile/debian/: changelog
packaging/: baselibs.conf  common.tar.bz2  gst-plugins-good-disable-gtk-doc-mobile.patch  gst-plugins-good-disable-gtk-doc-wearable.patch  gst-plugins-good.changes  gst-plugins-good.spec  gstreamer-plugins-good.spec
pkgconfig/: Makefile.am  Makefile.in  gstreamer-plugins-good.pc.in  gstreamer-tuner-uninstalled.pc.in  gstreamer-tuner.pc.in
po/: gst-plugins-good-0.10.pot  ja.gmo  lv.gmo  sr.gmo
sys/: Makefile.in
sys/directsound/: Makefile.in
sys/oss/: Makefile.in
sys/oss4/: Makefile.am  Makefile.in
sys/osxaudio/: Makefile.in
sys/osxvideo/: Makefile.in
sys/sunaudio/: Makefile.in
sys/v4l2/: Makefile.am  Makefile.in  gstv4l2bufferpool.c  gstv4l2tuner.h  v4l2_calls.c
sys/waveform/: Makefile.in
sys/ximage/: Makefile.in
tests/: Makefile.in
tests/check/: Makefile.in
tests/examples/: Makefile.in
tests/files/: Makefile.in
tests/icles/: Makefile.in
wearable/debian/: changelog  gstreamer0.10-plugins-good.install.in
(+30 files in other folders)
